--- a/style.css
+++ b/style.css
@@ -1,111 +1,159 @@
 @import url('https://fonts.googleapis.com/css2? family = Poppins: ital, wght @ 0,100; 0,200; 0,300; 0,400; 0,500; 0,600; 0,700; 0,800; 0,900; 1,100; 1,200; 1.300; 1.400; 1.500; 1.600; 1.700; 1.800; 1.900 & display = trocar ');
 
 * {
-    margin: 0;
-    padding: 0;
+    font-family: "Poppins",sans-serif;
     border: 0;
+    padding: 0;
+    margin: 0;
     box-sizing: border-box;
-    font-family: "Poppins", sans-serif;
 }
 
-body {
-    background: linear-gradient(45deg, #8e2de2, #4a00e0);
+body{
+    background: linear-gradient(45deg, #436436, #D6F599);
     background-repeat: no-repeat;
+    display: flex;
     min-height: 100vh;
     min-width: 100vw;
-    display: flex;
-    align-items: center;
     justify-content: center;
+    align-items: center;
 }
 
 main.container {
-    background: white;
+    background-color: white;
+    min-width: 300px;
     max-width: 350px;
-    max-height: 70vh;
+    max-height: 60vh;
     padding: 2rem;
-    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.2);
+    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.7);
     border-radius: 8px;
+    transition: all 0.6s ease;
 }
 
 main h2 {
-    font-weight: 600;
+    font-weight: 700;
     margin-bottom: 2rem;
     position: relative;
+    margin-left: 80px;
 }
 
 main h2::before{
     content: '';
     position: absolute;
-    height: 4px;
-    width: 30px;
+    height: 3px;
+    width: 25px;
     bottom: 3px;
     left: 0;
     border-radius: 8px;
-    background: linear-gradient(45deg, #8e2de2, #4a00e0);
+    background: linear-gradient(45deg, #034C3C, #B1CC74);
 }
 
-.input-field {
+form {
+    display: flex;
+    flex-direction: column;
+}
+
+form #btn{
+    background: linear-gradient(45deg, #034C3C, #B1CC74);
+    margin-top: 2rem;
+    padding: 0.4rem;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 0.9rem;
+    font-weight: 400;
+    color: white;
+}
+
+form #btn:hover{
+    letter-spacing: -1px;
+    background: linear-gradient(45deg, #034C3C, #B1CC74);
+}
+
+.input-dados{
     position: relative;
 }
 
-form .input-field:first-child{
-    margin-bottom: 1.5rem;
+form .input-dados:first-child{
+    margin-bottom: 1rem;
 }
 
-.input-field .underline::before{
+.input-dados .underline::before{
     content: '';
     position: absolute;
-    height: 1px;
+    height: 2px;
     width: 100%;
     bottom: -5px;
     left: 0;
     background: rgba(0, 0, 0, 0.2);
 }
-.input-field .underline::after{
+
+.input-dados .underline::after{
     content: '';
     position: absolute;
     height: 1px;
     width: 100%;
     bottom: -5px;
     left: 0;
-    background: linear-gradient(45deg, #8e2de2, #4a00e0);
+    background: linear-gradient(45deg, #034C3C, #B1CC74);
     transform: scaleX(0);
     transition: all .3s ease-in-out;
     transform-origin: left;
 }
 
-.input-field input:focus ~ .underline::after {
+.input-dados input:focus ~ .underline::after {
     transform: scaleX(1);
 }
 
-.input-field input {
+.input-dados input {
     outline: none;
     font-size: 0.9rem;
     color: rgba(0, 0, 0, 0.7);
 }
 
-.input-field input::placeholder {
-    color: rgba(0, 0, 0, 0.5);
+.input-dados input::placeholder {
+    color: rgba(0, 0, 0, 0.4);
 }
 
-form{
+.footer {
     display: flex;
     flex-direction: column;
+    margin-top: 1rem;
 }
 
-form input[type="submit"] {
-    margin-top: 2rem;
-    padding: 0.4rem;
-    background: linear-gradient(to left, #4776E6, #8e54e9);
-    cursor: pointer;
+.footer .social-redes i {
+    margin: 0 0.5rem;
+    width: 15px;
+}
+
+.footer .social-redes a {
+    text-decoration: none;
     color: white;
-    font-size: 0.9rem;
-    font-weight: 300;
-    border-radius: 4px;
-    transition: all 0.3s ease;
+    font-size: 1rem;
 }
 
-form input[type="submit"]:hover{
-    letter-spacing: 0.5px;
-    background: linear-gradient(to right,#4776E6, #8e54e9);
+.footer #tt {
+    background: linear-gradient(to right, #56a7f2, #468aca);
+    border-radius: 4px;
+    padding: 0.4rem;
+    font-size: 0.85rem;
+    width: 100%;
+    cursor: pointer;
+    margin-top: 1rem;
+}
+
+.footer #ff {
+    background: linear-gradient(to right, #1e3c72, #2a5298);
+    border-radius: 4px;
+    padding: 0.4rem;
+    font-size: 0.85rem;
+    width: 100%;
+    cursor: pointer;
+    margin-top: 1rem;
+}
+
+#tt:hover{
+    letter-spacing: 1px;
+}
+
+#ff:hover{
+    letter-spacing: 1px;
 }
